--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     }
   ],
   "dependencies": {
-    "debug": "^4.0.1"
+    "debug": "git+https://github.com/CommittedDev/debug.git"
   },
   "devDependencies": {
     "nodeunit": "^0.11.3",
